# invoice_summarizer

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  pr-build.yml
src/: main.py
