[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pypdf>=6.9.2",
]

[project.scripts]
invoice-summarizer = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["/"]
